[gd_scene load_steps=5 format=3 uid="uid://bi4f23fnd5r7"]

[ext_resource type="Script" path="res://Scripts/hudLevel.gd" id="1_tgv8d"]
[ext_resource type="FontFile" uid="uid://xt34up70b8nw" path="res://art/CarrotFont.ttf" id="2_csaw6"]
[ext_resource type="Texture2D" uid="uid://ccvupff87vx6w" path="res://art/Finished/weeds/carrot2.png" id="3_i5sm4"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_1iqrt"]

[node name="Node2D" type="Node2D"]

[node name="HUD" type="CanvasLayer" parent="."]
script = ExtResource("1_tgv8d")

[node name="GameOverMsg" type="Label" parent="HUD"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = -55.0
offset_right = 1.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.745098, 0.376471, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_csaw6")
theme_override_font_sizes/font_size = 80
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NumberMovesLeft" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -909.0
offset_right = 0.5
offset_bottom = -877.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.745098, 0.376471, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_csaw6")
theme_override_font_sizes/font_size = 32
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NumberForCondition1" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 152.0
offset_top = 75.0
offset_right = 153.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.745098, 0.376471, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_csaw6")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NumberForCondition2" type="Label" parent="HUD"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 267.0
offset_top = 75.0
offset_right = 268.0
offset_bottom = 107.0
grow_horizontal = 2
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.745098, 0.376471, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_csaw6")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="NumberOfCarrots" type="Label" parent="HUD"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -16.0
offset_top = -68.0
offset_right = -15.0
offset_bottom = -36.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 5
theme_override_colors/font_color = Color(0.745098, 0.376471, 0.152941, 1)
theme_override_fonts/font = ExtResource("2_csaw6")
theme_override_font_sizes/font_size = 24
horizontal_alignment = 1
vertical_alignment = 1
metadata/_edit_use_anchors_ = true

[node name="CarrotButton" type="Button" parent="HUD"]
offset_left = 209.0
offset_top = 913.0
offset_right = 267.0
offset_bottom = 971.0
theme_override_styles/focus = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/disabled_mirrored = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/disabled = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/hover_pressed_mirrored = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/hover_pressed = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/hover_mirrored = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/hover = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/pressed_mirrored = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/pressed = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/normal_mirrored = SubResource("StyleBoxEmpty_1iqrt")
theme_override_styles/normal = SubResource("StyleBoxEmpty_1iqrt")
action_mode = 0
icon = ExtResource("3_i5sm4")
metadata/_edit_use_anchors_ = true

[node name="CenterContainer" type="CenterContainer" parent="HUD"]
offset_right = 40.0
offset_bottom = 80.0
metadata/_edit_use_anchors_ = true

[connection signal="pressed" from="HUD/CarrotButton" to="HUD" method="_on_carrot_button_pressed"]
